Data/meow/test_meow_xo_file_error.log
11
Warning: React version was set to "detect" in eslint-plugin-react settings, but the "react" package is not installed. Assuming latest React version for linting.
/data/js-variants/multee/VariantsDeps/meow/variant10/meow/node_modules/has/src/index.js:5
module.exports = bind.call(Function.call, Object.prototype.hasOwnProperty);
                      ^

TypeError: bind.call is not a function
    at Object.<anonymous> (/data/js-variants/multee/VariantsDeps/meow/variant10/meow/node_modules/has/src/index.js:5:23)
    at Module._compile (node:internal/modules/cjs/loader:1105:14)
    at Module._extensions..js (node:internal/modules/cjs/loader:1159:10)
    at Module.load (node:internal/modules/cjs/loader:981:32)
    at Module._load (node:internal/modules/cjs/loader:827:12)
    at Module.require (node:internal/modules/cjs/loader:1005:19)
    at require (node:internal/modules/cjs/helpers:102:18)
    at Object.<anonymous> (/data/js-variants/multee/VariantsDeps/meow/variant10/meow/node_modules/is-core-module/index.js:3:11)
    at Module._compile (node:internal/modules/cjs/loader:1105:14)
    at Module._extensions..js (node:internal/modules/cjs/loader:1159:10)

Node.js v18.3.0
/data/js-variants/multee/VariantsDeps/meow/variant9/meow/node_modules/is-core-module/index.js:68
	return has(data, x) && versionIncluded(nodeVersion, data[x]);
	       ^

TypeError: has is not a function
    at isCore (/data/js-variants/multee/VariantsDeps/meow/variant9/meow/node_modules/is-core-module/index.js:68:9)
    at Object.fixNameField (/data/js-variants/multee/VariantsDeps/meow/variant9/meow/node_modules/normalize-package-data/lib/fixer.js:232:9)
    at /data/js-variants/multee/VariantsDeps/meow/variant9/meow/node_modules/normalize-package-data/lib/normalize.js:41:38
    at Array.forEach (<anonymous>)
    at normalize (/data/js-variants/multee/VariantsDeps/meow/variant9/meow/node_modules/normalize-package-data/lib/normalize.js:40:15)
    at meow (file:///data/js-variants/multee/VariantsDeps/meow/variant9/meow/index.js:170:2)
    at file:///data/js-variants/multee/Clients/meow/xo/cli.js:10:13
    at ModuleJob.run (node:internal/modules/esm/module_job:198:25)
    at async Promise.all (index 0)
    at async ESMLoader.import (node:internal/modules/esm/loader:409:24)

Node.js v18.3.0
Warning: React version was set to "detect" in eslint-plugin-react settings, but the "react" package is not installed. Assuming latest React version for linting.
Warning: React version was set to "detect" in eslint-plugin-react settings, but the "react" package is not installed. Assuming latest React version for linting.
Warning: React version was set to "detect" in eslint-plugin-react settings, but the "react" package is not installed. Assuming latest React version for linting.
file:///data/js-variants/multee/VariantsDeps/meow/variant5/meow/index.js:11
import {readPackageUpSync} from 'read-pkg-up';
        ^^^^^^^^^^^^^^^^^
SyntaxError: The requested module 'read-pkg-up' does not provide an export named 'readPackageUpSync'
    at ModuleJob._instantiate (node:internal/modules/esm/module_job:128:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:194:5)
    at async Promise.all (index 0)
    at async ESMLoader.import (node:internal/modules/esm/loader:409:24)
    at async loadESM (node:internal/process/esm_loader:85:5)
    at async handleMainPromise (node:internal/modules/run_main:61:12)

Node.js v18.3.0
file:///data/js-variants/multee/VariantsDeps/meow/variant4/meow/node_modules/redent/index.js:2
import indentString from 'indent-string';
       ^^^^^^^^^^^^
SyntaxError: The requested module 'indent-string' does not provide an export named 'default'
    at ModuleJob._instantiate (node:internal/modules/esm/module_job:128:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:194:5)
    at async Promise.all (index 0)
    at async ESMLoader.import (node:internal/modules/esm/loader:409:24)
    at async loadESM (node:internal/process/esm_loader:85:5)
    at async handleMainPromise (node:internal/modules/run_main:61:12)

Node.js v18.3.0
file:///data/js-variants/multee/VariantsDeps/meow/variant3/meow/node_modules/redent/index.js:1
import stripIndent from 'strip-indent';
       ^^^^^^^^^^^
SyntaxError: The requested module 'strip-indent' does not provide an export named 'default'
    at ModuleJob._instantiate (node:internal/modules/esm/module_job:128:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:194:5)
    at async Promise.all (index 0)
    at async ESMLoader.import (node:internal/modules/esm/loader:409:24)
    at async loadESM (node:internal/process/esm_loader:85:5)
    at async handleMainPromise (node:internal/modules/run_main:61:12)

Node.js v18.3.0
file:///data/js-variants/multee/VariantsDeps/meow/variant2/meow/index.js:10
import redent from 'redent';
       ^^^^^^
SyntaxError: The requested module 'redent' does not provide an export named 'default'
    at ModuleJob._instantiate (node:internal/modules/esm/module_job:128:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:194:5)
    at async Promise.all (index 0)
    at async ESMLoader.import (node:internal/modules/esm/loader:409:24)
    at async loadESM (node:internal/process/esm_loader:85:5)
    at async handleMainPromise (node:internal/modules/run_main:61:12)

Node.js v18.3.0
file:///data/js-variants/multee/VariantsDeps/meow/variant1/meow/index.js:9
import trimNewlines from 'trim-newlines';
       ^^^^^^^^^^^^
SyntaxError: The requested module 'trim-newlines' does not provide an export named 'default'
    at ModuleJob._instantiate (node:internal/modules/esm/module_job:128:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:194:5)
    at async Promise.all (index 0)
    at async ESMLoader.import (node:internal/modules/esm/loader:409:24)
    at async loadESM (node:internal/process/esm_loader:85:5)
    at async handleMainPromise (node:internal/modules/run_main:61:12)

Node.js v18.3.0
